update: summary dto and feign client added to synchronize with user service